alternated eda added

--- a/document_classification/known_docs_eda.ipynb
+++ b/document_classification/known_docs_eda.ipynb
@@ -1058,9 +1058,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 789,
+   "execution_count": 790,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 790,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#potentially manufacturing information\n",
+    "neg_df[neg_df.concept.isin(concept_sample1)]._id.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 789,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1096,6 +1120,29 @@
     "print(\"Negative Sample filtered by concept_sample2\")\n",
     "neg_df_fltr2 = filterData(neg_df,concept_sample2)\n",
     "neg_df_fltr2.groupby('concept').size().plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 791,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 791,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#potentially manufacturing information\n",
+    "neg_df[neg_df.concept.isin(concept_sample2)]._id.nunique()"
    ]
   }
  ],
